<resources>
    <string name="app_name">OtterMinded</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_login">Connexion</string>
    <string name="action_profil">Profil</string>
    <string name="action_questions">Questions</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Questions</string>
    <string name="menu_profil">Profil</string>
    <string name="menu_login">Connexion</string>
    <string-array name="theme">
        <item>Politique</item>
        <item>Justice</item>
        <item>Science</item>
        <item>Autre</item>
    </string-array>
    <string name="title_activity_question">QuestionActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="channel_name">OtterMinded</string>
    <string name="channel_description">La pensée des loutres</string>
    <string name="groupeNotif">com.android.example.OTTERMINDED</string>
    <string name="action_admin">Panel Admin</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="tab_text_1">Question</string>
    <string name="tab_text_2">Commentaire</string>
    <string name="tab_text_3">Utilisateur</string>
    <string name="tab_text_4">Approuver Question</string>

</resources>