<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.otterminded.ui.home.AproposFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.otterminded.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/activity_login" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.otterminded.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_profil"
        android:name="com.example.otterminded.ui.login.ProfileFragment"
        android:label="@string/menu_profil"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_approuver_question"
        android:name="com.example.otterminded.ui.approuverQuestion.ApprouverQuestionFragment"
        android:label="Aprouver question"
        tools:layout="@layout/fragment_approuver_question"/>

</navigation>