<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_64"
            android:title="Accueil"
            />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_questions_64"
            android:title="@string/action_questions"
            />
        <item
            android:id="@+id/nav_apropos"
            android:icon="@drawable/ic_more_64"
            android:title="@string/action_apropos"
            />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_64"
            android:title="Paramètres"
            />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_auth_64"
            android:title="@string/action_login"
            />
        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/ic_profil_64"
            android:title="@string/action_profil"
            />
        <item
            android:id="@+id/nav_approuver_question"
            android:icon="@drawable/ic_profil_64"
            android:title="Approuver question"
            />
    </group>
</menu>